--- a/AeroTube/imgui.ini
+++ b/AeroTube/imgui.ini
@@ -45,7 +45,7 @@ DockId=0x00000003,0
 
 [Window][Viewport]
 Pos=954,19
-Size=2886,2141
+Size=2100,2141
 Collapsed=0
 DockId=0x00000002,0
 
@@ -55,10 +55,18 @@ Size=952,1947
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Model Settings]
+Pos=3056,19
+Size=784,2141
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace     ID=0xC0DFADC4 Window=0xD0388BC8 Pos=595,473 Size=3840,2141 Split=X
-  DockNode    ID=0x00000001 Parent=0xC0DFADC4 SizeRef=952,2141 Split=Y Selected=0x590DF097
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=952,192 Selected=0x590DF097
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=952,1947 Selected=0x4746B4B8
-  DockNode    ID=0x00000002 Parent=0xC0DFADC4 SizeRef=2886,2141 CentralNode=1 Selected=0xC450F867
+DockSpace       ID=0xC0DFADC4 Window=0xD0388BC8 Pos=466,369 Size=3840,2141 Split=X
+  DockNode      ID=0x00000005 Parent=0xC0DFADC4 SizeRef=3054,2141 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=952,2141 Split=Y Selected=0x590DF097
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=952,192 Selected=0x590DF097
+      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=952,1947 Selected=0x4746B4B8
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=2100,2141 CentralNode=1 Selected=0xC450F867
+  DockNode      ID=0x00000006 Parent=0xC0DFADC4 SizeRef=784,2141 Selected=0x34B708AD
 
