--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/g-truc/glm
 [submodule "Engine/vendor/imgui"]
 	path = Engine/vendor/imgui
-	url = https://github.com/ocornut/imgui
+	url = https://github.com/TheRealFirst/imgui
